# gitea_oauth2

./: LICENSE  README.md  pyproject.toml
gitea_oauth2/: app.py
