[tool.poetry]
name = "gitea-oauth2"
version = "0.1.0"
description = ""
authors = ["ahmedhanafy725 <hanafya@incubaid.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
giteapy = "^1.0.8"
starlette = "^0.37.2"
uvicorn = "^0.30.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

